# arc-agi-follower

./: .codex  .env.example  .gitignore  README.md  debug_news_flow.py  main.py  main_complete.py  pyproject.toml
.github/workflows/: arc-agi-report.yml
src/: __init__.py  deep_research.py  kaggle_api.py  leaderboard.py  telegram_bot.py
tests/: test_deep_research.py  test_leaderboard.py  test_main.py
