[project]
name = "arc-agi-follower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.88.0",
    "kaggle>=2.0.0",
    "pytelegrambotapi>=4.32.0",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "tzdata>=2025.2",
]
